# blackhole-hsa-compute

./: .gitignore  build.zig
compute/: build.zig
compute/include/: blackhole_compute.h
compute/src/: c_api.zig  camera.zig  compute_manager.zig  geodesic_kernel.zig  hsa_context.zig  lib.zig
scripts/: build.sh  run.sh
src/: amdgcn_float_math.zig  main.zig
viewer/: Cargo.toml  build.rs
viewer/shaders/: display.wgsl
viewer/src/: ffi.rs  frame_buffer.rs  main.rs  renderer.rs  window.rs
